@@ -22,6 +22,8 @@ import java.lang.reflect.Field;
 import java.math.BigInteger;
 import java.net.*;
 import java.nio.ByteBuffer;
+import java.security.MessageDigest;
+import java.security.NoSuchAlgorithmException;
 import java.util.*;
 import java.util.concurrent.*;
 import java.util.zip.CRC32;
@@ -34,17 +36,14 @@ import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Joiner;
 import com.google.common.base.Strings;
 import com.google.common.util.concurrent.Uninterruptibles;
+
 import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import com.fasterxml.jackson.core.JsonFactory;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import org.apache.cassandra.auth.AllowAllNetworkAuthorizer;
-import org.apache.cassandra.audit.IAuditLogger;
+import io.netty.util.concurrent.FastThreadLocal;
 import org.apache.cassandra.auth.IAuthenticator;
 import org.apache.cassandra.auth.IAuthorizer;
-import org.apache.cassandra.auth.INetworkAuthorizer;
 import org.apache.cassandra.auth.IRoleManager;
 import org.apache.cassandra.config.DatabaseDescriptor;
 import org.apache.cassandra.db.DecoratedKey;
@@ -66,7 +65,8 @@ import org.apache.cassandra.io.util.FileUtils;
 import org.apache.cassandra.locator.InetAddressAndPort;
 import org.apache.cassandra.net.AsyncOneResponse;
 
-
+import org.codehaus.jackson.JsonFactory;
+import org.codehaus.jackson.map.ObjectMapper;
 
 public class FBUtilities
 {
@@ -85,10 +85,9 @@ public class FBUtilities
 
     private static volatile InetAddress localInetAddress;
     private static volatile InetAddress broadcastInetAddress;
-    private static volatile InetAddress broadcastNativeAddress;
-    private static volatile InetAddressAndPort broadcastNativeAddressAndPort;
-    private static volatile InetAddressAndPort broadcastInetAddressAndPort;
-    private static volatile InetAddressAndPort localInetAddressAndPort;
+    private static volatile InetAddress broadcastRpcAddress;
+
+    private static volatile String previousReleaseVersionString;
 
     public static int getAvailableProcessors()
     {
@@ -99,13 +98,40 @@ public class FBUtilities
             return Runtime.getRuntime().availableProcessors();
     }
 
+    private static final FastThreadLocal<MessageDigest> localMD5Digest = new FastThreadLocal<MessageDigest>()
+    {
+        @Override
+        protected MessageDigest initialValue()
+        {
+            return newMessageDigest("MD5");
+        }
+    };
+
     public static final int MAX_UNSIGNED_SHORT = 0xFFFF;
 
+    public static MessageDigest threadLocalMD5Digest()
+    {
+        MessageDigest md = localMD5Digest.get();
+        md.reset();
+        return md;
+    }
+
+    public static MessageDigest newMessageDigest(String algorithm)
+    {
+        try
+        {
+            return MessageDigest.getInstance(algorithm);
+        }
+        catch (NoSuchAlgorithmException nsae)
+        {
+            throw new RuntimeException("the requested digest algorithm (" + algorithm + ") is not available", nsae);
+        }
+    }
+
     /**
-     * Please use getJustBroadcastAddress instead. You need this only when you have to listen/connect. It's also missing
-     * the port you should be using. 99% of code doesn't want this.
+     * Please use getBroadcastAddress instead. You need this only when you have to listen/connect.
      */
-    public static InetAddress getJustLocalAddress()
+    public static InetAddress getLocalAddress()
     {
         if (localInetAddress == null)
             try
@@ -121,87 +147,50 @@ public class FBUtilities
         return localInetAddress;
     }
 
-    /**
-     * The address and port to listen on for intra-cluster storage traffic (not client). Use this to get the correct
-     * stuff to listen on for intra-cluster communication.
-     */
-    public static InetAddressAndPort getLocalAddressAndPort()
-    {
-        if (localInetAddressAndPort == null)
-        {
-            localInetAddressAndPort = InetAddressAndPort.getByAddress(getJustLocalAddress());
-        }
-        return localInetAddressAndPort;
-    }
-
-    /**
-     * Retrieve just the broadcast address but not the port. This is almost always the wrong thing to be using because
-     * it's ambiguous since you need the address and port to identify a node. You want getBroadcastAddressAndPort
-     */
-    public static InetAddress getJustBroadcastAddress()
+    public static InetAddress getBroadcastAddress()
     {
         if (broadcastInetAddress == null)
             broadcastInetAddress = DatabaseDescriptor.getBroadcastAddress() == null
-                                 ? getJustLocalAddress()
+                                 ? getLocalAddress()
                                  : DatabaseDescriptor.getBroadcastAddress();
         return broadcastInetAddress;
     }
 
     /**
-     * Get the broadcast address and port for intra-cluster storage traffic. This the address to advertise that uniquely
-     * identifies the node and is reachable from everywhere. This is the one you want unless you are trying to connect
-     * to the local address specifically.
-     */
-    public static InetAddressAndPort getBroadcastAddressAndPort()
-    {
-        if (broadcastInetAddressAndPort == null)
-        {
-            broadcastInetAddressAndPort = InetAddressAndPort.getByAddress(getJustBroadcastAddress());
-        }
-        return broadcastInetAddressAndPort;
-    }
-
-    /**
      * <b>THIS IS FOR TESTING ONLY!!</b>
      */
+    @VisibleForTesting
     public static void setBroadcastInetAddress(InetAddress addr)
     {
         broadcastInetAddress = addr;
-        broadcastInetAddressAndPort = InetAddressAndPort.getByAddress(broadcastInetAddress);
     }
 
-    /**
-     * <b>THIS IS FOR TESTING ONLY!!</b>
-     */
-    public static void setBroadcastInetAddressAndPort(InetAddressAndPort addr)
+    public static InetAddress getBroadcastRpcAddress()
     {
-        broadcastInetAddress = addr.address;
-        broadcastInetAddressAndPort = addr;
-    }
-
-    /**
-     * This returns the address that is bound to for the native protocol for communicating with clients. This is ambiguous
-     * because it doesn't include the port and it's almost always the wrong thing to be using you want getBroadcastNativeAddressAndPort
-     */
-    public static InetAddress getJustBroadcastNativeAddress()
-    {
-        if (broadcastNativeAddress == null)
-            broadcastNativeAddress = DatabaseDescriptor.getBroadcastRpcAddress() == null
+        if (broadcastRpcAddress == null)
+            broadcastRpcAddress = DatabaseDescriptor.getBroadcastRpcAddress() == null
                                    ? DatabaseDescriptor.getRpcAddress()
                                    : DatabaseDescriptor.getBroadcastRpcAddress();
-        return broadcastNativeAddress;
+        return broadcastRpcAddress;
     }
 
-    /**
-     * This returns the address that is bound to for the native protocol for communicating with clients. This is almost
-     * always what you need to identify a node and how to connect to it as a client.
-     */
-    public static InetAddressAndPort getBroadcastNativeAddressAndPort()
+    public static Collection<InetAddress> getAllLocalAddresses()
     {
-        if (broadcastNativeAddressAndPort == null)
-            broadcastNativeAddressAndPort = InetAddressAndPort.getByAddressOverrideDefaults(getJustBroadcastNativeAddress(),
-                                                                                             DatabaseDescriptor.getNativeTransportPort());
-        return broadcastNativeAddressAndPort;
+        Set<InetAddress> localAddresses = new HashSet<InetAddress>();
+        try
+        {
+            Enumeration<NetworkInterface> nets = NetworkInterface.getNetworkInterfaces();
+            if (nets != null)
+            {
+                while (nets.hasMoreElements())
+                    localAddresses.addAll(Collections.list(nets.nextElement().getInetAddresses()));
+            }
+        }
+        catch (SocketException e)
+        {
+            throw new AssertionError(e);
+        }
+        return localAddresses;
     }
 
     public static String getNetworkInterface(InetAddress localAddress)
@@ -265,6 +254,30 @@ public class FBUtilities
         return compareUnsigned(bytes1, bytes2, 0, 0, bytes1.length, bytes2.length);
     }
 
+    /**
+     * @return The bitwise XOR of the inputs. The output will be the same length as the
+     * longer input, but if either input is null, the output will be null.
+     */
+    public static byte[] xor(byte[] left, byte[] right)
+    {
+        if (left == null || right == null)
+            return null;
+        if (left.length > right.length)
+        {
+            byte[] swap = left;
+            left = right;
+            right = swap;
+        }
+
+        // left.length is now <= right.length
+        byte[] out = Arrays.copyOf(right, right.length);
+        for (int i = 0; i < left.length; i++)
+        {
+            out[i] = (byte)((left[i] & 0xFF) ^ (right[i] & 0xFF));
+        }
+        return out;
+    }
+
     public static void sortSampledKeys(List<DecoratedKey> keys, Range<Token> range)
     {
         if (range.left.compareTo(range.right) >= 0)
@@ -322,6 +335,16 @@ public class FBUtilities
             return null;
         }
         return triggerDir;
+    }
+
+    public static void setPreviousReleaseVersionString(String previousReleaseVersionString)
+    {
+        FBUtilities.previousReleaseVersionString = previousReleaseVersionString;
+    }
+
+    public static String getPreviousReleaseVersionString()
+    {
+        return previousReleaseVersionString;
     }
 
     public static String getReleaseVersionString()
@@ -425,6 +448,12 @@ public class FBUtilities
         }
     }
 
+    public static void waitOnFutures(List<AsyncOneResponse> results, long ms) throws TimeoutException
+    {
+        for (AsyncOneResponse result : results)
+            result.get(ms, TimeUnit.MILLISECONDS);
+    }
+
     public static <T> Future<? extends T> waitOnFirstFuture(Iterable<? extends Future<? extends T>> futures)
     {
         return waitOnFirstFuture(futures, 100);
@@ -513,42 +542,6 @@ public class FBUtilities
         if (!className.contains("."))
             className = "org.apache.cassandra.auth." + className;
         return FBUtilities.construct(className, "role manager");
-    }
-
-    public static INetworkAuthorizer newNetworkAuthorizer(String className)
-    {
-        if (className == null)
-        {
-            return new AllowAllNetworkAuthorizer();
-        }
-        if (!className.contains("."))
-        {
-            className = "org.apache.cassandra.auth." + className;
-        }
-        return FBUtilities.construct(className, "network authorizer");
-    }
-    
-    public static IAuditLogger newAuditLogger(String className) throws ConfigurationException
-    {
-        if (!className.contains("."))
-            className = "org.apache.cassandra.audit." + className;
-        return FBUtilities.construct(className, "Audit logger");
-    }
-
-    public static boolean isAuditLoggerClassExists(String className)
-    {
-        if (!className.contains("."))
-            className = "org.apache.cassandra.audit." + className;
-
-        try
-        {
-            FBUtilities.classForName(className, "Audit logger");
-        }
-        catch (ConfigurationException e)
-        {
-            return false;
-        }
-        return true;
     }
 
     /**
@@ -889,7 +882,43 @@ public class FBUtilities
         return historyDir;
     }
 
-    public static void closeAll(Collection<? extends AutoCloseable> l) throws Exception
+    public static void updateWithShort(MessageDigest digest, int val)
+    {
+        digest.update((byte) ((val >> 8) & 0xFF));
+        digest.update((byte) (val & 0xFF));
+    }
+
+    public static void updateWithByte(MessageDigest digest, int val)
+    {
+        digest.update((byte) (val & 0xFF));
+    }
+
+    public static void updateWithInt(MessageDigest digest, int val)
+    {
+        digest.update((byte) ((val >>> 24) & 0xFF));
+        digest.update((byte) ((val >>> 16) & 0xFF));
+        digest.update((byte) ((val >>>  8) & 0xFF));
+        digest.update((byte) ((val >>> 0) & 0xFF));
+    }
+
+    public static void updateWithLong(MessageDigest digest, long val)
+    {
+        digest.update((byte) ((val >>> 56) & 0xFF));
+        digest.update((byte) ((val >>> 48) & 0xFF));
+        digest.update((byte) ((val >>> 40) & 0xFF));
+        digest.update((byte) ((val >>> 32) & 0xFF));
+        digest.update((byte) ((val >>> 24) & 0xFF));
+        digest.update((byte) ((val >>> 16) & 0xFF));
+        digest.update((byte) ((val >>>  8) & 0xFF));
+        digest.update((byte)  ((val >>> 0) & 0xFF));
+    }
+
+    public static void updateWithBoolean(MessageDigest digest, boolean val)
+    {
+        updateWithByte(digest, val ? 0 : 1);
+    }
+
+    public static void closeAll(List<? extends AutoCloseable> l) throws Exception
     {
         Exception toThrow = null;
         for (AutoCloseable c : l)
@@ -944,36 +973,10 @@ public class FBUtilities
     }
 
     @VisibleForTesting
-    public static void reset()
+    protected static void reset()
     {
         localInetAddress = null;
-        localInetAddressAndPort = null;
         broadcastInetAddress = null;
-        broadcastInetAddressAndPort = null;
-        broadcastNativeAddress = null;
-    }
-
-    /**
-     * Hack to prevent the ugly "illegal access" warnings in Java 11+ like the following.
-     */
-    public static void preventIllegalAccessWarnings()
-    {
-        // Example "annoying" trace:
-        //        WARNING: An illegal reflective access operation has occurred
-        //        WARNING: Illegal reflective access by io.netty.util.internal.ReflectionUtil (file:...)
-        //        WARNING: Please consider reporting this to the maintainers of io.netty.util.internal.ReflectionUtil
-        //        WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
-        //        WARNING: All illegal access operations will be denied in a future release
-        try
-        {
-            Class<?> c = Class.forName("jdk.internal.module.IllegalAccessLogger");
-            Field f = c.getDeclaredField("logger");
-            f.setAccessible(true);
-            f.set(null, null);
-        }
-        catch (Exception e)
-        {
-            // ignore
-        }
+        broadcastRpcAddress = null;
     }
 }
